// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div>
  <div
    className="APIComponent-root-145"
  >
    <header
      className="MuiPaper-root-161 MuiPaper-elevation4-167 MuiAppBar-root-153 MuiAppBar-positionFixed-154 MuiAppBar-colorPrimary-159 mui-fixed"
    >
      <div
        className="MuiToolbar-root-188 MuiToolbar-regular-190 MuiToolbar-gutters-189 APIComponent-nowrap-147"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-198 MuiIconButton-root-192 MuiIconButton-colorInherit-193 APIComponent-menuButton-148"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-197"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-201"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-208"
          />
        </button>
        <h2
          className="MuiTypography-root-215 MuiTypography-title-221 MuiTypography-colorInherit-234 APIComponent-flex-146"
        >
          Point Pods
        </h2>
      </div>
    </header>
    <div
      className="APIComponent-spacer-150"
    />
  </div>
  <button
    aria-label="New Tournament"
    className="MuiButtonBase-root-198 MuiButton-root-253 MuiButton-fab-268 MuiButton-contained-262 MuiButton-containedSecondary-264 MuiButton-raised-265 MuiButton-raisedSecondary-267 APIComponent-actionButton-144"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-254"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-201"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-208"
    />
  </button>
  <div
    className="TournamentCards-root-277"
  >
    <div
      className="MuiPaper-root-161 MuiPaper-elevation1-164 MuiPaper-rounded-162 MuiCard-root-280 TournamentCards-card-278"
      id="not-found"
    >
      <div
        className="MuiCardHeader-root-281"
      >
        <div
          className="MuiCardHeader-content-284"
        >
          <span
            className="MuiTypography-root-215 MuiTypography-headline-220 MuiCardHeader-title-285"
          >
            No Tournaments Found
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div>
  <div
    className="APIComponent-root-145"
  >
    <header
      className="MuiPaper-root-161 MuiPaper-elevation4-167 MuiAppBar-root-153 MuiAppBar-positionFixed-154 MuiAppBar-colorPrimary-159 mui-fixed"
    >
      <div
        className="MuiToolbar-root-188 MuiToolbar-regular-190 MuiToolbar-gutters-189 APIComponent-nowrap-147"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-198 MuiIconButton-root-192 MuiIconButton-colorInherit-193 APIComponent-menuButton-148"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-197"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-201"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-208"
          />
        </button>
        <h2
          className="MuiTypography-root-215 MuiTypography-title-221 MuiTypography-colorInherit-234 APIComponent-flex-146"
        >
          Point Pods
        </h2>
      </div>
    </header>
    <div
      className="APIComponent-spacer-150"
    />
  </div>
  <button
    aria-label="New Tournament"
    className="MuiButtonBase-root-198 MuiButton-root-253 MuiButton-fab-268 MuiButton-contained-262 MuiButton-containedSecondary-264 MuiButton-raised-265 MuiButton-raisedSecondary-267 APIComponent-actionButton-144"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-254"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-201"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-208"
    />
  </button>
  <div
    className="TournamentCards-root-277"
  >
    <div
      className="MuiPaper-root-161 MuiPaper-elevation1-164 MuiPaper-rounded-162 MuiCard-root-280 TournamentCards-card-278"
      id="mock0"
    >
      <div
        className="MuiCardHeader-root-281"
      >
        <div
          className="MuiCardHeader-content-284"
        >
          <span
            className="MuiTypography-root-215 MuiTypography-headline-220 MuiCardHeader-title-285"
          >
            test0
          </span>
          <span
            className="MuiTypography-root-215 MuiTypography-body1-224 MuiTypography-colorTextSecondary-238 MuiCardHeader-subheader-286"
          >
            cat0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-287"
      >
        <p
          className="MuiTypography-root-215 MuiTypography-body1-224"
        >
          4 Total Players
        </p>
        <p
          className="MuiTypography-root-215 MuiTypography-body1-224"
        >
          3 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-288"
      >
        <a
          className="MuiButtonBase-root-198 MuiButton-root-253 MuiButton-text-255 MuiButton-flat-258 MuiButton-sizeSmall-274 TournamentCards-right-279 MuiCardActions-action-289"
          href="/tournament/mock0"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-254"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-208"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-161 MuiPaper-elevation1-164 MuiPaper-rounded-162 MuiCard-root-280 TournamentCards-card-278"
      id="mock2"
    >
      <div
        className="MuiCardHeader-root-281"
      >
        <div
          className="MuiCardHeader-content-284"
        >
          <span
            className="MuiTypography-root-215 MuiTypography-headline-220 MuiCardHeader-title-285"
          >
            test2
          </span>
          <span
            className="MuiTypography-root-215 MuiTypography-body1-224 MuiTypography-colorTextSecondary-238 MuiCardHeader-subheader-286"
          >
            cat0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-287"
      >
        <p
          className="MuiTypography-root-215 MuiTypography-body1-224"
        >
          4 Total Players
        </p>
        <p
          className="MuiTypography-root-215 MuiTypography-body1-224"
        >
          4 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-288"
      >
        <a
          className="MuiButtonBase-root-198 MuiButton-root-253 MuiButton-text-255 MuiButton-flat-258 MuiButton-sizeSmall-274 TournamentCards-right-279 MuiCardActions-action-289"
          href="/tournament/mock2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-254"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-208"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
